cmake_minimum_required(VERSION 3.15)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

macro(ADD_EXE NAME)
  add_executable(${NAME}.out ${NAME}/solution.cpp)
endmacro()

add_exe(twoSumII)
add_exe(sumOfSquareNumbers)
add_exe(reverseVowels)
add_exe(validPalindromeII)
add_exe(mergeSortedArray)
add_exe(linkedListCycle)
add_exe(findLongestWord)
add_exe(kthLargestElement)
add_exe(topKFrequentElements)
add_exe(sortCharactersByFrequency)
add_exe(sortColors)